--- a/src/Containers/MainScreen.css
+++ b/src/Containers/MainScreen.css
@@ -1,5 +1,5 @@
 .App {
-  display:flex;
+  display: flex;
   flex-direction: column;
 
   background-color: #282c34;
@@ -26,7 +26,6 @@
   width: 300px;
   
   display: flex;
-  align-items: center;
   justify-content: center;
 
   cursor: pointer;
@@ -39,6 +38,8 @@
 .linkContainer > a {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  width: 90%;
 
   text-decoration: none;
 }
@@ -51,7 +52,14 @@
   color: #de1174;
 }
 
+.twitter > a:visited {
+  color: #1da1f2;
+}
+
+.reddit > a:visited {
+  color: #ff4500;
+}
+
 .siteLogo {
   height: 30px;
-  padding-right: 20px;
 }
